--- a/_pages/working-papers.html
+++ b/_pages/working-papers.html
@@ -1,12 +1,12 @@
 ---
 layout: archive
-title: "Teaching"
-permalink: /teaching/
+title: "working-papers"
+permalink: /working-papers/
 author_profile: true
 ---
 
 {% include base_path %}
 
-{% for post in site.teaching reversed %}
+{% for post in site.working-papers reversed %}
   {% include archive-single.html %}
 {% endfor %}
