--- a/_pages/working-papers.html
+++ b/_pages/working-papers.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "working-papers"
+title: "Ongoing research projects"
 permalink: /working-papers/
 author_profile: true
 ---
